# sanhum

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  Sanhum.pro  install_all.py  install_hardware_modules.py  install_minimal.py  install_simple.py  package.xml  resources.qrc  robot_params.yaml  sanhum.pro  sanhum_qt.pro  setup.py  start_direct.py  start_gui.bat  start_sanhum.bat  start_simple.bat  test_available.py  test_cpp_structure.py  test_interfaces.py  test_movement.py
config/: raspberry_pi_config.yaml
docs/: SECURITY.md  hardware_config.json
include/: communication_protocols.h  esp32_driver.h  gamepad_control.h  gamepad_control.h.disabled  joystick_widget.h  main_window.h  robot_view_widget.h
launch/: main.launch.py  raspberry_pi.launch.py
scripts/: README.md  check_dependencies.py  install_raspberry_pi.sh  wifi-server.service
src/: arduino_interface.py  armkinematics.cpp  armkinematics.h  camera_interface.py  esp32_driver.cpp  esp32_interface.py  gamepad_control.cpp  gpio_interface.py  gui_main.cpp  gui_main.py  hardware_integration.py  httpserver.cpp  httpserver.h  input_controller.py  joystick_widget.cpp  main.cpp  main_pi.cpp  main_window.cpp  motor_control.py  motor_driver.cpp  motordriver.cpp  motordriver.h  robot_controller.cpp  robot_interface.py  robot_main.cpp  robot_simulation.py  robot_view_widget.cpp  robotmodel.cpp  robotmodel.h  rpi_gpio_interface.py  sanhum_robot_gui.cpp  serial_interfaces.py  wifi_server.py
src/sanhum_qt/: CMakeLists.txt  package.xml
src/sanhum_qt/include/: arduino_sensors.h  cameras.h  joystick_widget.h  main_window.h  motor_driver.h  robot_client.h  wifi_server.h  yolo_detector.h
src/sanhum_qt/launch/: main.launch.py
src/sanhum_qt/src/: arduino_sensors.cpp  cameras.cpp  esp32_driver.cpp  gamepad_control.cpp.disabled  main_window.cpp  motor_driver.cpp  robot_client.cpp  wifi_server.cpp  yolo_detector.cpp
www/: index.html  webrtc.js
www/js/: cameras.js  chassis.js  main.js  manipulator.js  network.js  robotState.js  robotstate.js  uiContorols.js  uiControls.js  webrtc.js
