<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sanhum</name>
  <version>0.0.0</version>
  <description>Sanhum Robot</description>
  <maintainer email="your@email.com">You</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_type>ament_cmake</build_type>  ← ЭТОГО НЕТ!

  <export>
  </export>
</package>
