<?xml version="1.0"?>
<package format="3">
  <name>sanhum</name>
  <version>0.0.0</version>
  <description>Sanhum Robot</description>
  <maintainer email="your@email.com">You</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>  <!-- ПЕРЕМЕСТИ СЮДА! -->
  </export>
</package>
