<?xml version="1.0"?>
<package format="3">
  <name>sanhum</name>
  <version>1.0.0</version>
  <description>Sanhum Robot System - ROS2 robot control with Windows GUI and Raspberry Pi robot node</description>

  <maintainer email="maintainer@sanhum-robot.org">Sanhum Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
  </export>
</package>
